--- a/style.css
+++ b/style.css
@@ -21,21 +21,26 @@ body {
 }
 
 .bg .left img {
-    margin: -600px 0 0 -420px;
+/*     margin: -600px 0 0 -420px; */
+    margin: -422px 0 0 -347px;
 }
 
 .bg .right {
-    margin: -140px 0 0 610px;
+/*     margin: -140px 0 0 610px; */
+    margin: -187px 0 0 759px;
 }
 
 
 /* Card Css */
 
 .card {
-    position: absolute;
+/*     position: absolute;
     top: 62px;
-    left: 32%;
+    left: 32%; */
     /* height: 500px;     Here extra height is added*/
+    position: absolute;
+    top: 153px;
+    left: 38%;
 }
 
 .container {
